# generador-constancias

./: .gitignore  README.md  pyproject.toml
generador_constancias/: pyproject.toml
generador_constancias/config/: routers.py  settings.py  urls.py  views.py
generador_constancias/constancias/: admin.py  forms.py  models.py  views.py
generador_constancias/constancias/migrations/: 0001_initial.py  0002_evento_descripcion_participante_rol_participante.py  0002_remove_participante_evento_id_evento_participantes.py  0003_alter_participante_email_participante.py  0003_evento_duracion_horas_alter_evento_modalidad_evento_and_more.py  0004_alter_evento_descripcion_alter_evento_participantes.py  0004_alter_plantilla_archivo.py
generador_constancias/plantillas/: Diploma.docx
generador_constancias/src/generador_constancias/: __init__.py
generador_constancias/static/css/: custom.css
generador_constancias/static/js/: custom.js
generador_constancias/templates/: base.html  home.html  test_post.html
generador_constancias/templates/components/: README.md  navbar.html
generador_constancias/templates/constancias/: carga_csv_form.html  cargar_participantes_csv.html  cargar_participantes_csv_corrupted.html  confirmar_eliminar_evento.html  confirmar_eliminar_participante.html  crear_evento.html  crear_participante_individual.html  detalle_evento.html  detalle_participante.html  gestionar_participantes.html  lista_eventos.html  lista_participantes.html  pagina_generar.html  pagina_generar_backup.html
generador_constancias/usuarios/: views.py
(+2 files in other folders)
