[project]
name = "generador-constancias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JesusF10", email = "jesusfl06oqk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
]

[project.scripts]
generador-constancias = "generador_constancias:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"
