[project]
name = "generador-constancias"
version = "0.1.0"
description = "Sistema administrativo para generación de constancias universitarias"
readme = "README.md"
authors = [
    { name = "JesusF10", email = "jesusfl06oqk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "python-docx>=1.2.0",
    "reportlab>=4.4.4",
    "pillow>=12.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
